--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <meta property="og:image:secure_url" content="https://cdn.shopify.com/s/files/1/0463/0789/products/1_e2affe59-59e2-443e-9b29-6f8351c48afc_large.png?v=1480558942">
+    <meta property="og:image:type" content="image/jpeg" /> 
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
